
  #build aufgabe_2_und_3
  add_executable(aufgabe_2_und_3
  aufgabe_2_und_3.cpp)

  #build aufgabe_4
  add_executable(aufgabe_4
  aufgabe_4.cpp
  circle.cpp
  color.hpp
  vec2.cpp)

  #build aufgabe_5
  add_executable(aufgabe_5
  aufgabe_5.cpp)

#build aufgabe_6
add_executable(aufgabe_6
aufgabe_6.cpp
circle.cpp
color.hpp
vec2.cpp)

#build aufgabe_7
add_executable(aufgabe_7
aufgabe_7.cpp
circle.cpp
color.hpp
vec2.cpp)

#build aufgabe_8
add_executable(aufgabe_8
aufgabe_8.cpp
circle.cpp
color.hpp
vec2.cpp)

#build aufgabe_9
add_executable(aufgabe_9
aufgabe_9.cpp)

#build aufgabe_11
add_executable(aufgabe_11
aufgabe_11.cpp)

#build aufgabe_12
add_executable(aufgabe_12
aufgabe_12.cpp)

#build aufgabe_14
add_executable(aufgabe_14
aufgabe_14.cpp
circle.cpp
color.hpp
vec2.cpp)



